Populate eslint definitions

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "eslintConfig": {
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "parser": "@typescript-eslint/parser",
     "plugins": [
       "@typescript-eslint"
