--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/jasmine-enzyme": "^7.0.1",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "eslint": "^7.30.0",
@@ -41,7 +41,7 @@
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.42.0",
+    "webpack": "^5.42.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
@@ -58,7 +58,10 @@
     ]
   },
   "eslintConfig": {
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
       "@typescript-eslint"
