--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --mode=development --hot",
     "build": "webpack --mode=production",
     "check": "tsc --noEmit",
-    "test": "karma start --single-run"
+    "test": "karma start --single-run",
+    "test:debug": "karma start --browsers Chrome"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
